# domica-html

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: publish.yml
src/domica-html/: __init__.py  block.py  inctement.py
src/domica_html/: __init__.py  block.py  inctement.py  node.py  tags.py
tests/: test_api.py  test_rendering.py
