[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domica-html"
version = "0.1.0"
description = "Declarative Python DSL for building HTML documents programmatically"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["html", "dsl", "html-generator", "python-html", "dom"]
authors = [
    { name = "Opolo", email = "nefris.me@gmail.com" }
]

dependencies = []

[project.urls]
Homepage = "https://github.com/opolonix/domica-html"
Repository = "https://github.com/opolonix/domica-html"
Documentation = "https://github.com/opolonix/domica-html#readme"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.5",
    "black>=23.3",
    "isort>=6.0"
]