[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domica_html"
version = "0.1.3"
description = "Declarative Python DSL for building HTML documents programmatically"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["html", "dsl", "html-generator", "python-html", "dom"]
authors = [
    { name = "Opolo", email = "nefris.me@gmail.com" }
]
dependencies = []

[project.urls]
Homepage = "https://github.com/opolonix/domica-html"
Repository = "https://github.com/opolonix/domica-html"
Documentation = "https://github.com/opolonix/domica-html#readme"

# Настройка setuptools для src layout
[tool.setuptools.packages.find]
where = ["src"]
